# SIXEngine

./: .gitignore  CMakeLists.txt  readme.MD
cmake/sdl2/: Copyright.txt  FindSDL2.cmake  FindSDL2_image.cmake
doc/: SXNGN Design Doc.docx  _sdl2_ttf-config.cmake  readme.txt  sdl2_image-config.cmake  todolist.ods  todolist.xlsx  ~$NGN Design Doc.docx
lib/KISS/: kiss_example1.c
lib/KISS/kiss_sdl/: kiss_draw.c  kiss_general.c  kiss_posix.c  kiss_sdl.h  kiss_widgets.c
lib/SXNGN/cpp/: Camera.cpp  Collision.cpp  Database.cpp  Physics.cpp  Texture.cpp  Tile.cpp  Timer.cpp  gameutils.cpp
lib/SXNGN/cpp/ECS/Components/: Camera.cpp  CameraComponent.cpp  DatabaseComponent.cpp  Director.cpp  Moveable.cpp  Party.cpp  SpriteFactory.cpp  UI.cpp  UserInput.cpp
lib/SXNGN/cpp/ECS/Core/: Item.cpp
lib/SXNGN/cpp/ECS/Systems/: BattleSystem.cpp  CameraControlSystem.cpp  CameraSystem.cpp  CollisionSystem.cpp  DirectorSystem.cpp  EventSystem.cpp  MovementSystem.cpp  ParallaxSystem.cpp  PartySystem.cpp  PhysicsSystem.cpp  PlayerControlSystem.cpp  RenderSystem.cpp  TaskSchedulerSystem.cpp  UserInputSystem.cpp
lib/SXNGN/cpp/ECS/Utilities/: DropEntry.cpp  ECS_Utils.cpp  Entity_Builder_Utils.cpp  JSON_Utils.cpp  Map_Utils.cpp  Physics_Utils.cpp
lib/SXNGN/cpp/ECS_Collision/: CollisionHandlingDelegate.cpp
lib/SXNGN/cpp/ECS_EventHandling/: EventHandlingDelegate.cpp
lib/SXNGN/cpp/ECS_Rendering/: RenderingDelegate.cpp
lib/SXNGN/cpp/Object/: Dot.cpp  Entity.cpp  MouseObj.cpp  Object.cpp
lib/SXNGN/cpp/Sprite/: Tile.cpp
lib/SXNGN/cpp/State/: BaseGameState.cpp
lib/SXNGN/cpp/UI/: UIElement.cpp  UserInputUtils.cpp
lib/SXNGN/cpp/World/: Room.cpp
lib/SXNGN/headers/: Camera.h  Collision.h  Constants.h  Database.h  Physics.h  Texture.h  Tile.h  Timer.h  gameutils.h
lib/SXNGN/headers/ECS/Components/: Battle.hpp  Camera.hpp  CameraComponent.hpp  Collision.hpp  Components.hpp  DatabaseComponent.hpp  Director.hpp  EventComponent.hpp  ExternEntity.hpp  Gravity.hpp  Location.hpp  Market.hpp  MetaComponent.hpp  Moveable.hpp  Parallax.hpp  Party.hpp  Renderable.hpp  RigidBody.hpp  Selectable.hpp  SpriteFactory.hpp  StateIndicatorComponent.hpp  TaskComponent.hpp  TaskWorkerComponent.hpp  Thrust.hpp  Tile.hpp  Transform.hpp  UI.hpp  UUID.hpp  UserInput.hpp  WorldMap.hpp
lib/SXNGN/headers/ECS/Core/: Component.hpp  ComponentArray.hpp  ComponentManager.hpp  Coordinator.hpp  EntityManager.hpp  Event.hpp  EventManager.hpp  Item.hpp  StateManager.hpp  System.hpp  SystemManager.hpp  TextureManager.hpp  Types.hpp
lib/SXNGN/headers/ECS/Systems/: BattleSystem.hpp  CameraControlSystem.hpp  CameraSystem.hpp  CollisionSystem.hpp  DirectorSystem.hpp  EventSystem.hpp  MovementSystem.hpp  ParallaxSystem.hpp  PartySystem.hpp  PhysicsSystem.hpp  PlayerControlSystem.hpp  RenderSystem.hpp  TaskSchedulerSystem.hpp  UserInputSystem.hpp
lib/SXNGN/headers/ECS/Utilities/: DropEntry.hpp  ECS_Utils.hpp  Entity_Builder_Utils.hpp  Game_Utils.hpp  JSON_Utils.hpp  Map_Utils.hpp  Physics_Utils.hpp
lib/SXNGN/headers/ECS_Collision/: CollisionHandlingDelegate.h
lib/SXNGN/headers/ECS_EventHandling/: EventHandlingDelegate.h
lib/SXNGN/headers/ECS_Rendering/: RenderingDelegate.h
lib/SXNGN/headers/Object/: Dot.h  Entity.h  MouseObj.h  Object.h
lib/SXNGN/headers/Sprite/: Tile.h
lib/SXNGN/headers/State/: BaseGameState.h
lib/SXNGN/headers/UI/: UIElement.h  UserInputUtils.hpp
lib/SXNGN/headers/World/: Room.h
lib/json/nlohmann/: LICENSE.MIT.URL  README.md.URL  json.hpp
lib/olc/: v2d_generic.h
lib/sole-master/: sole.hpp
media/desert_tile/: manifest.txt  map.map  tile_names.txt
media/kiss_resources/sand/: FinalFantasyTacticsAdvance.sfd
media/maps/: world_map.csv  world_map.map  world_map_1d.csv
media/overworld/: manifest.txt
media/player_model/: player.ase
media/wasteland_tile/: credits.txt  manifest.txt  map.map
save/: save1.json  save2.json
sdl_cmake_config_templates/: sdl2-config.cmake  sdl2_image-config.cmake  sdl2_ttf-config.cmake  sdl2image-config.cmake
src/: Main.cpp  readme.txt
src/apps/: ECS_Demo.cpp  HoplonSimulator.cpp  LevelEditor.cpp  kiss_example1.cpp
src/cpp/: Collision.cpp  Dot.cpp  Texture.cpp  Tile.cpp  gameutils.cpp
src/headers/: Collision.h  Constants.h  Dot.h  Texture.h  Tile.h  gameutils.h
src/tests/: json_tests.cpp  system_tests.cpp  unit_tests.cpp
vclib/mingw/SDL2-2.0.14/: sdl2-config.cmake
vclib/mingw/SDL2_image-2.0.5/: sdl2_image-config.cmake
vclib/mingw/SDL2_ttf-2.0.15/: sdl2_ttf-config.cmake
vclib/visual/SDL2-2.0.14/include/: SDL_events.h  SDL_loadso.h
